(Binary Analysis) Moved Debugger to Debugger::Linux
* The Rose::BinaryAnalysis::Debugger class is renamed to
  Rose::BinaryAnalysis::Debugger::Linux and inherits from the new
  Rose::BinaryAnalysis::Debugger::Base class.

* This is to formalize the debugger API and make room for additional
  kinds of debuggers.

* Rose::BinaryAnalysis::Debugger::Linux is disabled except when ROSE
  is built on Linux.

* Rose::BinaryAnalysis::InstructionSemantics::NativeSemantics is
  disabled except when ROSE is built on Linux.

RPM-269

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -306,6 +306,10 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/ControlFlow.h						\
 	Rose/BinaryAnalysis/DataFlow.h							\
 	Rose/BinaryAnalysis/Debugger.h							\
+	Rose/BinaryAnalysis/Debugger/Base.h						\
+	Rose/BinaryAnalysis/Debugger/BasicTypes.h					\
+	Rose/BinaryAnalysis/Debugger/Linux.h						\
+	Rose/BinaryAnalysis/Debugger/ThreadId.h						\
 	Rose/BinaryAnalysis/Demangler.h							\
 	Rose/BinaryAnalysis/Disassembler.h						\
 	Rose/BinaryAnalysis/Disassembler/Aarch32.h					\
