--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -690,6 +690,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Debugger \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Disassembler \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Dwarf \
                          @top_srcdir@/src/Rose/BinaryAnalysis/InstructionSemantics \
