(Binary Analysis) Started work on the GDB debugger interface
* Rose::BinaryAnalysis::Debugger::Gdb uses the Debugger::Base API to
  talk to a GDB server running on a remote TCP connection.

* This is work in progress: The code compiles but is not yet usable
  and not tested.

RPM-276

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -308,6 +308,9 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/Debugger.h							\
 	Rose/BinaryAnalysis/Debugger/Base.h						\
 	Rose/BinaryAnalysis/Debugger/BasicTypes.h					\
+	Rose/BinaryAnalysis/Debugger/Exception.h					\
+	Rose/BinaryAnalysis/Debugger/Gdb.h						\
+	Rose/BinaryAnalysis/Debugger/GdbResponse.h					\
 	Rose/BinaryAnalysis/Debugger/Linux.h						\
 	Rose/BinaryAnalysis/Debugger/ThreadId.h						\
 	Rose/BinaryAnalysis/Demangler.h							\
