--- a/src/Rose/BinaryAnalysis/Debugger/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Debugger/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_library(roseBinaryAnalysisDebugger
 	OBJECT
 	Base.C
+	Exception.C
+	Gdb.C
+	GdbResponse.C
 	Linux.C
 	ThreadId.C)
 
@@ -9,6 +12,9 @@ add_dependencies(roseBinaryAnalysisDebugger rosetta_generated)
 install(FILES
 	Base.h
 	BasicTypes.h
+	Exception.h
+	Gdb.h
+	GdbResponse.h
 	Linux.h
 	ThreadId.h
 
