(ByteCode) Implemented SgJvmComposite
- Inherits from SgBinaryComposite inheriting from SgFile
- testTranslator now works for Java class files
  - need to also make testTranslator work on CIL files

JVM-1
LDRD_SI-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library(roseBinaryFormats OBJECT
 
   ### BinaryComposite classes ###
   BinaryComposite.C
-  #TODO: JvmComposite.C
+  JvmComposite.C
 
   ### Generic Base Classes ###
   GenericDynamicLinking.C
