(ByteCode) Changed name of files *.cpp --> *.C
- Now: sage_interface.C, cmdline.C, and keep_going.C

JVM-1
LDRD_SI-1
ISCP-22

--- a/src/frontend/SageIII/CMakeLists.txt
+++ b/src/frontend/SageIII/CMakeLists.txt
@@ -22,9 +22,9 @@ set(SAGE3_SOURCES
   attachPreprocessingInfoTraversal.C
   attributeListMap.C
   manglingSupport.C
-  sage_support/sage_support.cpp
-  sage_support/cmdline.cpp
-  sage_support/keep_going.cpp
+  sage_support/sage_support.C
+  sage_support/cmdline.C
+  sage_support/keep_going.C
   fixupCopy_scopes.C
   fixupCopy_symbols.C
   fixupCopy_references.C
