--- a/src/frontend/SageIII/sage_support/Makefile_variables
+++ b/src/frontend/SageIII/sage_support/Makefile_variables
@@ -1,9 +1,9 @@
 # Non-recursive Makefile
 
 fSageSupport_la_sources=\
-	$(fSageSupportPath)/sage_support.cpp \
-	$(fSageSupportPath)/keep_going.cpp \
-	$(fSageSupportPath)/cmdline.cpp
+	$(fSageSupportPath)/sage_support.C \
+	$(fSageSupportPath)/keep_going.C \
+	$(fSageSupportPath)/cmdline.C
 
 # DQ (2/2/2016): Added dependence to force this to be recompiled.
 $(fSageSupportPath)/cmdline.lo: ${top_builddir}/rose_config.h
@@ -15,11 +15,11 @@ fSageSupport_includeHeaders=\
 
 # DQ (3/13/2010):
 #
-# Extract the required OFP source files needed for ROSE Fortran support (in sage_support/sage_support.cpp).
+# Extract the required OFP source files needed for ROSE Fortran support (in sage_support/sage_support.C).
 # if ROSE_USE_OPEN_FORTRAN_PARSER
 #
 if ROSE_BUILD_FORTRAN_LANGUAGE_SUPPORT
-$(srcdir)/$(fSageSupportPath)/sage_support.cpp: extract_rose_required_ofp_source_files
+$(srcdir)/$(fSageSupportPath)/sage_support.C: extract_rose_required_ofp_source_files
 endif
 
 # DQ (10/9/2010): We are now trying to properly represent the dependences so avoid redundant
