(Concolic) Move architecture-specific things to name spaces
* Moved Linux i386 and m68k bare metal systems into namespaces.

RPM-295

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -690,6 +690,8 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/I386Linux \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/M68kSystem \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Debugger \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Disassembler \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Dwarf \
