(Binary Analysis) Renamed BaseSemantics Types.h to BasicTypes.h
* This aligns the name of this file with most of the rest of binary
  analysis, where the header files that declare or define basic types
  such as forward declarations as named BasicTypes.h

RPM-299

--- a/src/Rose/BinaryAnalysis/InstructionSemantics/BaseSemantics/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/InstructionSemantics/BaseSemantics/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(roseBinaryAnalysisInstructionSemanticsBaseSemantics OBJECT
 add_dependencies(roseBinaryAnalysisInstructionSemanticsBaseSemantics rosetta_generated)
 
 install(FILES
+  BasicTypes.h
   Dispatcher.h
   Exception.h
   Formatter.h
@@ -35,6 +36,5 @@ install(FILES
   State.h
   SValue.h
   SymbolicMemory.h
-  Types.h
     
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/InstructionSemantics/BaseSemantics)
