--- a/src/Rose/BinaryAnalysis/Concolic/M68kSystem/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Concolic/M68kSystem/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(roseBinaryAnalysisConcolicM68kSystem OBJECT
   Architecture.C
-  ConcreteExecutor.C)
+  ConcreteExecutor.C
+  ConcreteExecutorResult.C)
 
 add_dependencies(roseBinaryAnalysisConcolicM68kSystem rosetta_generated)
 
@@ -8,5 +9,6 @@ install(FILES
   Architecture.h
   BasicTypes.h
   ConcreteExecutor.h
+  ConcreteExecutorResult.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/Concolic/M68kSystem)
