(Concolic) More renaming
* FooExecutorResult -> FooResult (where Foo is any concrete executor)

* Moved I386Linux specific executors, results, and execution managers
to the I386Linux namespace.

* Moved M68kExitStatus to M68kSystem::TracingManager

RPM-295

--- a/src/Rose/BinaryAnalysis/Concolic/M68kSystem/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Concolic/M68kSystem/CMakeLists.txt
@@ -1,14 +1,16 @@
 add_library(roseBinaryAnalysisConcolicM68kSystem OBJECT
   Architecture.C
-  ConcreteExecutor.C
-  ConcreteExecutorResult.C)
+  TracingExecutor.C
+  TracingManager.C
+  TracingResult.C)
 
 add_dependencies(roseBinaryAnalysisConcolicM68kSystem rosetta_generated)
 
 install(FILES
   Architecture.h
   BasicTypes.h
-  ConcreteExecutor.h
-  ConcreteExecutorResult.h
+  TracingExecutor.h
+  TracingManager.h
+  TracingResult.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/Concolic/M68kSystem)
