--- a/src/Rose/BinaryAnalysis/Concolic/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Concolic/CMakeLists.txt
@@ -5,15 +5,12 @@ add_library(roseBinaryAnalysisConcolic OBJECT
   Architecture.C
   ConcolicExecutor.C
   ConcreteExecutor.C
-  ConcreteExecutorResult.C
+  ConcreteResult.C
   Database.C
   ExecutionEvent.C
   ExecutionLocation.C
   ExecutionManager.C
   InputVariables.C
-  LinuxExitStatus.C
-  LinuxTraceConcrete.C
-  LinuxTraceConcreteResult.C
   SharedMemory.C
   Specimen.C
   SystemCall.C
@@ -28,16 +25,13 @@ install(FILES
   BasicTypes.h
   ConcolicExecutor.h
   ConcreteExecutor.h
-  ConcreteExecutorResult.h
+  ConcreteResult.h
   Database.h
   ExecutionEvent.h
   ExecutionLocation.h
   ExecutionManager.h
   I386Linux.h
   InputVariables.h
-  LinuxExitStatus.h
-  LinuxTraceConcrete.h
-  LinuxTraceConcreteResult.h
   M68kSystem.h
   SharedMemory.h
   Specimen.h
