--- a/src/Rose/BinaryAnalysis/Concolic/I386Linux/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Concolic/I386Linux/CMakeLists.txt
@@ -1,14 +1,22 @@
 add_library(roseBinaryAnalysisConcolicI386Linux OBJECT
   Architecture.C
-  ConcreteExecutor.C
-  ConcreteExecutorResult.C)
+  ExitStatusExecutor.C
+  ExitStatusManager.C
+  ExitStatusResult.C
+  TracingExecutor.C
+  TracingManager.C
+  TracingResult.C)
 
 add_dependencies(roseBinaryAnalysisConcolicI386Linux rosetta_generated)
 
 install(FILES
   Architecture.h
   BasicTypes.h
-  ConcreteExecutor.h
-  ConcreteExecutorResult.h
+  ExitStatusExecutor.h
+  ExitStatusManager.h
+  ExitStatusResult.h
+  TracingExecutor.h
+  TracingManager.h
+  TracingResult.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/Concolic/I386Linux)
