(Jovial) Comment processing
Now passes:
- gitlab-issue-180.jov

GL-180

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -237,6 +237,7 @@ JOVIAL_TESTCODES = \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
+ comments_assign.jov                    \
  comments_start_term.jov                \
  comments_start_term_procmod.jov
 
