(Concolic) Abstracted shared memory operations; m68k support; new callbacks
* Reorganized some functions for handling shared memory reads and
  writes, and added operations for writes.

* Added some useful shared memory handlers to the Callback directory.

  + Callback::MemoryExit implements a way to terminate the test case
    when the test case reads or writes to certain addresses. When
    writing, the written value can become the exit status.

  + Callback::MemoryTime implements a simple Unix time
    service. Reading from the memory addresses returns the current
    time in number of seconds since the Unix epoch (time_t).

  + Callback::MemoryInput causes the memory addresses to be treated as
    unconstrained test case inputs.

* m68k concolic execution is able to create new test cases from
  another test case at conditional branch instructions when the
  conditions depend on shared memory reads (from MemoryInput).
  However, it is not yet able to replay those events when starting the
  new test case.

RPM-305

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -690,6 +690,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
+			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/Callback \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/I386Linux \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic/M68kSystem \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Debugger \
