(Jovial) Test of comment processing for loop construct
- some minor tweaking of comments before/after/end_of basic blocks

GL-180

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -238,6 +238,7 @@ JOVIAL_TESTCODES = \
  shadow.jov                             \
  comments.jov                           \
  comments_assign.jov                    \
+ comments_loop.jov                      \
  comments_start_term.jov                \
  comments_start_term_procmod.jov
 
