(config) Minimal dependencies builds
RedHat UBI 8 packages requirements, goal is to run: install-core & check-core

Working with UBI8 image, we first add:
  * which diffutils patch tar xz bzip2 file sed -> not all are needed

Minimal:
  * make gcc gcc-c++ perl
  * boost-devel

Other:
  * git -> to clone ROSE (not used when building ROSE)

If using autoconf:
  * automake libtool -> to run ./configure
  * libtool-ltdl-devel -> to run ./build

If using cmake:
  * cmake

Adding cxx:
  * flex byacc bison ->
     - in src/frontend/SageIII for preproc-c.ll omplexer.cc ompparser.cc
     - in src/midend/programAnalysis/annotationLanguageParser
  * libquadmath-devel -> only when getting EDG from download (NEED TESTING)
  * wget -> to download EDG binary

Adding fortran:
  * gcc-gfortran java-1.8.0-openjdk-devel

RC-1443

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -809,7 +809,7 @@ if((NOT WIN32) AND (enable-binary-analysis))
 endif()
 
 find_package(FLEX)
-if(NOT FLEX_FOUND)
+if((NOT FLEX_FOUND) AND (enable-c))
   message(FATAL_ERROR "Could not find flex command")
 endif()
 
