(Jovial) Fixed comment processing recently broken
This fixes a problem created by adding RelativePositionType::end_of. However,
the placement of the comment on an inner block (struct) is placed before the
outer block (struct).  This is likely a problem in C++ comments as well for
anonymous structs.  The problematic code is in SageInterface::moveCommentsToNewStatement().

GL-186

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -234,6 +234,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-162.jov                   \
  gitlab-issue-181.jov                   \
  gitlab-issue-182.jov                   \
+ gitlab-issue-186.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
