(Build) Added rose-feature-tests internal command
* Outputs the definitions found in <featureTests.h> for debugging.
  Since this file doesn't depend on librose, it's an easy way to
  figure out what features are enabled before compiling the library.

RPM-321

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,9 @@ add_custom_target(
   generate_rosePublicConfig
   DEPENDS ${CMAKE_BINARY_DIR}/rosePublicConfig.h)
 
+add_executable(rose-feature-tests featureTests.C)
+
+
 ########################################################################################################################
 # ROSETTA
 ########################################################################################################################
