(Build) Fix missing concolic testing libraries for CMake
RPM-322

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -143,6 +143,9 @@ set(rose_LIB_OBJS
   roseBinaryAnalysis
   roseBinaryAnalysisByteCode
   roseBinaryAnalysisConcolic
+  roseBinaryAnalysisConcolicCallback
+  roseBinaryAnalysisConcolicI386Linux
+  roseBinaryAnalysisConcolicM68kSystem
   roseBinaryAnalysisDebugger
   roseBinaryAnalysisDisassembler
   roseBinaryAnalysisInstructionSemantics
