(tests) building compilation-database from CompileTests
 * added "sample" target in tests/nonsmoke/functional/CompileTests (autoconf only)
 * requires to set the environment variable $BEAR to capture compdbs
 * TODO update pass/fail lists in Makefile.am
 * TODO expand to Cxx20 and other languages (Fortran, Ada)

RC-1446

--- a/tests/nonsmoke/functional/CompileTests/C99_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C99_tests/Makefile.am
@@ -64,6 +64,9 @@ TEST_Source_passed = ${ALL_TESTCODES:.c=.c.passed}
 testCompiler:
 	ln -s `which @BACKEND_C_COMPILER@` testCompiler
 
+../../echoCompiler:
+	cd ../..; $(MAKE) echoCompiler
+
 TEST_TRANSLATOR=../../testTranslator
 
 #########
@@ -104,6 +107,7 @@ check-local:
 
 clean-local:
 	rm -f *.o rose_*.[cC]
+	rm -f *.passed *.failed
 
 status:
 	@$(MAKE) $(TEST_Source_passed)
