--- a/tests/nonsmoke/functional/CompileTests/MicrosoftWindows_C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/MicrosoftWindows_C_tests/Makefile.am
@@ -77,6 +77,9 @@ TEST_Source_passed = ${ALL_TESTCODES:.c=.c.passed}
 testCompiler:
 	ln -s `which @BACKEND_C_COMPILER@` testCompiler
 
+../../echoCompiler:
+	cd ../..; $(MAKE) echoCompiler
+
 TEST_TRANSLATOR=../../testTranslator
 
 #########
