--- a/tests/nonsmoke/functional/CompileTests/Cxx11_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/Cxx11_tests/Makefile.am
@@ -1245,6 +1245,9 @@ TEST_Source_passed = ${ALL_TESTCODES:.C=.C.passed}
 testCompiler:
 	ln -s `which @BACKEND_CXX_COMPILER@` testCompiler
 
+../../echoCompiler:
+	cd ../..; $(MAKE) echoCompiler
+
 TEST_TRANSLATOR=../../testTranslator
 
 #########
