--- a/tests/nonsmoke/functional/CompileTests/Cxx14_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/Cxx14_tests/Makefile.am
@@ -119,6 +119,9 @@ TEST_Source_passed = ${ALL_TESTCODES:.C=.C.passed}
 testCompiler:
 	ln -s `which @BACKEND_CXX_COMPILER@` testCompiler
 
+../../echoCompiler:
+	cd ../..; $(MAKE) echoCompiler
+
 TEST_TRANSLATOR=../../testTranslator
 
 #########
@@ -199,7 +202,7 @@ clean-local:
 	rm -f *.unfoldedConstants-o
 	rm -rf QMTest
 	rm -f *.int.c
-	rm -f *.passed
+	rm -f *.passed *.failed
 
 status:
 	@$(MAKE) $(TEST_Source_passed)
