(Binary Analysis) Improved model checker variable detection
* Information about variables is in its own header and implementation
  file.

* Information about global variables and local variables is contained
  in a single object, simplifying some of the callbacks.

RPM-335

--- a/src/Rose/BinaryAnalysis/ModelChecker/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/ModelChecker/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(roseBinaryAnalysisModelChecker OBJECT
   SourceLister.C
   Tag.C
   UninitializedVariableTag.C
+  Variables.C
   WorkerStatus.C)
 
 add_dependencies(roseBinaryAnalysisModelChecker rosetta_generated)
@@ -48,6 +49,7 @@ install(FILES
   Tag.h
   Types.h
   UninitializedVariableTag.h
+  Variables.h
   WorkerStatus.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/ModelChecker)
