--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -453,6 +453,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/ModelChecker/Tag.h						\
 	Rose/BinaryAnalysis/ModelChecker/Types.h					\
 	Rose/BinaryAnalysis/ModelChecker/UninitializedVariableTag.h			\
+	Rose/BinaryAnalysis/ModelChecker/Variables.h					\
 	Rose/BinaryAnalysis/ModelChecker/WorkerStatus.h					\
 	Rose/BinaryAnalysis/NoOperation.h						\
 	Rose/BinaryAnalysis/Partitioner2.h						\
