--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -235,6 +235,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-181.jov                   \
  gitlab-issue-182.jov                   \
  gitlab-issue-186.jov                   \
+ gitlab-issue-193.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
